# restui

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-09-help-overlay.md  2026-05-09-request-detail-panel.md
docs/superpowers/specs/: 2026-05-07-restui-design.md  2026-05-07-restui-implementation-plan.md  2026-05-09-help-overlay-design.md  2026-05-09-request-detail-panel-design.md
examples/: local-apis.http  sample.http
src/: app.rs  http.rs  lib.rs  main.rs  message.rs  parser.rs  vars.rs
src/ui/: help_overlay.rs  mod.rs  request_detail.rs  request_list.rs  response_pane.rs  status_bar.rs
tests/: integration.rs
